--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.7</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -43,6 +42,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.1-jre</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
